Had the wrong font-weight for Butler. Fixed.

--- a/src/sass/config/typography.scss
+++ b/src/sass/config/typography.scss
@@ -17,7 +17,7 @@ $font-headings: $font-serif;
 $font-headings-italic: $font-serif-italic;
 $font-headings-weight-bold:  700;
 $font-headings-weight:       700;
-$font-headings-weight-light: 400;
+$font-headings-weight-light: 300;
 
 $font-code: $font-mono;
 $font-code-italic: $font-mono-italic;
